--- a/css/movie.css
+++ b/css/movie.css
@@ -51,6 +51,73 @@ body {
     height: 200px;
     width: 200px;
 }
+.lds-grid {
+    display: inline-block;
+    position: relative;
+    width: 240px;
+    height: 240px;
+}
+.lds-grid div {
+    position: absolute;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    background: #fff;
+    animation: lds-grid 1.2s linear infinite;
+}
+.lds-grid div:nth-child(1) {
+    top: 24px;
+    left: 24px;
+    animation-delay: 0s;
+}
+.lds-grid div:nth-child(2) {
+    top: 24px;
+    left: 96px;
+    animation-delay: -0.4s;
+}
+.lds-grid div:nth-child(3) {
+    top: 24px;
+    left: 168px;
+    animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(4) {
+    top: 96px;
+    left: 24px;
+    animation-delay: -0.4s;
+}
+.lds-grid div:nth-child(5) {
+    top: 96px;
+    left: 96px;
+    animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(6) {
+    top: 96px;
+    left: 168px;
+    animation-delay: -1.2s;
+}
+.lds-grid div:nth-child(7) {
+    top: 168px;
+    left: 24px;
+    animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(8) {
+    top: 168px;
+    left: 96px;
+    animation-delay: -1.2s;
+}
+.lds-grid div:nth-child(9) {
+    top: 168px;
+    left: 168px;
+    animation-delay: -1.6s;
+}
+@keyframes lds-grid {
+    0%, 100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+}
 
 
 
