--- a/css/movie.css
+++ b/css/movie.css
@@ -23,8 +23,10 @@ body {
     text-shadow: 1px 1px 10px var(--red-color);
 }
 #rc-car{
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
+   box-shadow: 1px 1px 10px var(--red-color);
+    background-color: var(--gold-color);
 }
 .modal-header {
     background-color: mediumpurple;
@@ -53,7 +55,10 @@ body {
     border-radius: 15px;
 }
 .cardTog {
-    background-color: var(--blue-color);
+    /*background-color: var(--blue-color);*/
+    background-image: url("../img/whitey.png");
+    background-color: white;
+    box-shadow: 0px 0px 10px 3px mediumpurple;
     width: 70%;
     font-size: 1.5rem;
 }
@@ -67,11 +72,8 @@ body {
     background-color: mediumpurple;
     color: white;
 }
-#card-paragraph{
-}
-.darker {
-    background-color: rgba(0, 0, 0, 0.5);
-}#filter-button {
+
+#filter-button {
     background-color: mediumpurple;
  }
  #searchIcon {
@@ -118,8 +120,8 @@ body {
 }
 #popcorn-guy img {
     box-shadow: 0px 0px 10px 10px mediumpurple;
-    height: 350px !important;
-    width: 350px !important;
+    height: 290px !important;
+    width: 290px !important;
 }
 
 .frown {
